--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	</head>
 	<body>
 		<header class="header-main">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="mobile-bars">
+				<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+				<path
+					d="M0 96C0 78.33 14.33 64 32 64H416C433.7 64 448 78.33 448 96C448 113.7 433.7 128 416 128H32C14.33 128 0 113.7 0 96zM0 256C0 238.3 14.33 224 32 224H416C433.7 224 448 238.3 448 256C448 273.7 433.7 288 416 288H32C14.33 288 0 273.7 0 256zM416 448H32C14.33 448 0 433.7 0 416C0 398.3 14.33 384 32 384H416C433.7 384 448 398.3 448 416C448 433.7 433.7 448 416 448z"
+				/>
+			</svg>
+
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" class="logo">
 				<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 				<path
@@ -16,18 +23,68 @@
 				/>
 			</svg>
 
+			<form action="" class="header--form">
+				<input type="search" placeholder="Search or jump to..." />
+			</form>
+
 			<ul class="main-nav">
-				<li>
-					<a href="#">Pull request</a>
+				<li class="main-nav--item">
+					<a class="main-nav--link" href="#">Pull request</a>
 				</li>
-				<li>
-					<a href="#">Pull request</a>
+				<li class="main-nav--item">
+					<a class="main-nav--link" href="#">Issues</a>
+				</li>
+				<li class="main-nav--item">
+					<a class="main-nav--link" href="#">Marketplace</a>
+				</li>
+				<li class="main-nav--item">
+					<a class="main-nav--link" href="#">Explore</a>
 				</li>
 			</ul>
 
 			<ul class="user-nav">
-				<li>
-					<a href="#">notification</a>
+				<li class="user-nav--item">
+					<a class="user-nav--link" href="#">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+							<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+							<path
+								d="M256 32V51.2C329 66.03 384 130.6 384 208V226.8C384 273.9 401.3 319.2 432.5 354.4L439.9 362.7C448.3 372.2 450.4 385.6 445.2 397.1C440 408.6 428.6 416 416 416H32C19.4 416 7.971 408.6 2.809 397.1C-2.353 385.6-.2883 372.2 8.084 362.7L15.5 354.4C46.74 319.2 64 273.9 64 226.8V208C64 130.6 118.1 66.03 192 51.2V32C192 14.33 206.3 0 224 0C241.7 0 256 14.33 256 32H256zM224 512C207 512 190.7 505.3 178.7 493.3C166.7 481.3 160 464.1 160 448H288C288 464.1 281.3 481.3 269.3 493.3C257.3 505.3 240.1 512 224 512z"
+							/>
+						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+							<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+							<path
+								d="M310.6 246.6l-127.1 128C176.4 380.9 168.2 384 160 384s-16.38-3.125-22.63-9.375l-127.1-128C.2244 237.5-2.516 223.7 2.438 211.8S19.07 192 32 192h255.1c12.94 0 24.62 7.781 29.58 19.75S319.8 237.5 310.6 246.6z"
+							/>
+						</svg>
+					</a>
+				</li>
+				<li class="user-nav--item">
+					<a class="user-nav--item" href="#">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+							<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+							<path
+								d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"
+							/>
+						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+							<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+							<path
+								d="M310.6 246.6l-127.1 128C176.4 380.9 168.2 384 160 384s-16.38-3.125-22.63-9.375l-127.1-128C.2244 237.5-2.516 223.7 2.438 211.8S19.07 192 32 192h255.1c12.94 0 24.62 7.781 29.58 19.75S319.8 237.5 310.6 246.6z"
+							/>
+						</svg>
+					</a>
+				</li>
+				<li class="user-nav--item">
+					<a class="user-nav--item" href="#">
+						<img class="avatar" src="./assets/avatar/me.jpeg" alt="avatar" />
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+							<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+							<path
+								d="M310.6 246.6l-127.1 128C176.4 380.9 168.2 384 160 384s-16.38-3.125-22.63-9.375l-127.1-128C.2244 237.5-2.516 223.7 2.438 211.8S19.07 192 32 192h255.1c12.94 0 24.62 7.781 29.58 19.75S319.8 237.5 310.6 246.6z"
+							/>
+						</svg>
+					</a>
 				</li>
 			</ul>
 			<!-- <form action="" class="header-form">
